<resources>
    <string name="app_name">koketa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test</string>
    <string name="nav_header_subtitle">test@koketa.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_routes">Rutas</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_products">Articulos</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About app</string>
    <string name="menu_help">Help center</string>
    <string name="menu_profile">Perfil</string>


    <string name="user_type">Tipo de usuario</string>
    <string name="no_data">No hay información para mostrar.</string>
    <string name="warehouse">Almacen</string>
    <string name="accept">Ok</string>
    <string name="call">Llamar</string>
    <string name="permission">Necesitas dar permiso para identificar el dispositivo.</string>
    <string name="phone">Teléfono</string>
    <string name="email">Email</string>
    <string name="routes">Rutas</string>
    <string name="clients">Clientes</string>
    <string name="articles">Articulos</string>
    <string name="pendings">Pendientes</string>
    <string name="synchronize">Sincronizar</string>
    <string name="visits">Visitas</string>
    <string name="pending_status">Estado pedido</string>
    <string name="profile">Perfil</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_product">Agregar articulos</string>
    <string name="not_available">no disponible</string>
    <string name="dummy">dummy</string>
    <string name="search">Buscar</string>
    <string name="error">Ups! Volver a intentar</string>
    <string name="summary">Resumen</string>
    <string name="article">Articulo</string>
    <string name="close">Cerrar</string>
    <string name="allow">Permitir</string>
    <string name="client_detail">Detalle del cliente</string>
    <string name="client_list">Lista de clientes</string>
    <string name="category_product_list">Articulos por categoría</string>
    <string name="category_list">Categorías</string>
    <string name="pending_list">Lista de pendientes</string>
    <string name="pending_detail">Detalle del pedido</string>
    <string name="route_list">Lista de rutas</string>
    <string name="visit_list">Lista de visitas</string>
    <string name="product_list">Lista de productos</string>
    <string name="product_detail">Detalle del articulo</string>
    <string name="empty_code">Ingrese su código.</string>
    <string name="empty_password">Ingresa tu contraseña.</string>
    <string name="username">Username</string>
    <string name="validating">Validando...</string>
    <string name="in_progress">En progreso...</string>
    <string name="in_line">En cola...</string>
    <string name="done">Finalizado!.</string>
    <string name="password">Password</string>
    <string name="login">Ingresar a mi cuenta</string>
    <string name="order">Pedido</string>
    <string name="forgot_password_3">Olvidé mi contraseña</string>
    <string name="get_imei">¿Quieres saber el Imei de tu equipo?</string>

    <string-array name="array_payment">
        <item>Letra 30, 45, 60 días</item>
        <item>Letras 30 días</item>
        <item>Contado</item>
        <item>Previo deposito (3% Dscto)</item>
        <item>Letra 30, 40, 50, 60 días</item>
        <item>Letra 30, 60 días</item>
    </string-array>

</resources>
