<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_routes" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_view_quilt_black_24dp"
            android:title="@string/menu_products" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>
