<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/ic_info_outline_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:tint="@color/white"
        android:background="@color/info"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_10"
        android:layout_marginRight="@dimen/dim_10">

        <TextView
            android:id="@+id/xx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/livvic"
            android:gravity="center"
            android:text="About App Koketa"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_version_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/dummy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim_18"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/dummy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim_18"
            android:textStyle="italic|bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/close"
                style="@style/Button.Action.Positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/close" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>