<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/ic_assignment_ind_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:tint="@color/white"
        android:background="@color/slider_3"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dim_10"
        android:layout_marginRight="@dimen/dim_10">

        <TextView
            android:id="@+id/xx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:text="Licencia B1Sales"
            android:fontFamily="@font/livvic"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ccc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:text="Ingrese el ID de la empresa"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim_15"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/et_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/accept"
                style="@style/Button.Action.Negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/accept" />

            <Button
                android:id="@+id/close"
                style="@style/Button.Action.Positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/close" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>